syntax = "proto3";

import "nanopb.proto";

message HederaKey {
    oneof key {
        bytes ed25519 = 2 [(nanopb).max_size = 32];
    }
}

message HederaShardID {
    uint64 shardNum = 1;
}

message HederaRealmID {
    uint64 shardNum = 1;
    uint64 realmNum = 2;
}

message HederaAccountID {
    uint64 shardNum = 1;
    uint64 realmNum = 2;
    uint64 accountNum = 3;
}

message HederaTimestamp {
    uint64 seconds = 1;
    uint32 nanos = 2;
}

message HederaDuration {
    uint64 seconds = 1;
}

message HederaTransactionID {
    HederaAccountID accountID = 2;
}
