syntax = "proto3";

message HederaCryptoCreateTransactionBody {
    uint64 initialBalance = 2;
}
