syntax = "proto3";

import "nanopb.proto";
import "proto/BasicTypes.proto";

message HederaAccountAmount {
    HederaAccountID accountID = 1;
    sint64 amount = 2;
}

message HederaTransferList {
    repeated HederaAccountAmount accountAmounts = 1 [(nanopb).max_count = 2];
}

message HederaCryptoTransferTransactionBody {
    HederaTransferList transfers = 1;
}
